@startuml
set separator none

package "Domain" #DDDDDD {

    package "DTO" #DDDDDD {
        class CustomerDTO <<DTO>> {

        }

        class CustomerRepresentativeDTO <<DTO>> {

        }
    }

    package "Mapper" #DDDDDD {
        class CustomerListMapper <<Mapper>> {
            + toDTO(customer) : CustomerDTO
            + customersToDTO(customers) : List<CustomerDTO>
        }

        class CustomerRepresentativeListMapper <<Mapper>> {
            + toDTO(representative) : CustomerRepresentativeDTO
            + representativesToDTO(representatives) : List<CustomerRepresentativeDTO>
        }
    }

    package "Repository " #DDDDDD {
        Interface CustomerRepository <<Repository>> {
            + getCustomers() : List<Customer>
            + getRepresentativesOfCustomer(customer, representative): List<CustomerRepresentative>
            + disableCustomerRepresentative(representative)
        }

        Interface RepositoryFactory <<Factory>> {
            - RepositoryFactory()
            + getCustomerRepository() : CustomerRepository
        }

        Interface Repository <<Repository>> {
            + save(entity T) : T
            + delete(entity T)
            + findById(id: String) : T
            + findAll() : List<T>
            + deleteById(id: ID)
            + count() : long
        }
    }

    class Customer <<Entity>> {
        + Customer (name, address, vat, status, type)
    }
    class CustomerRepresentative <<Entity>> {
        + CustomerRepresentative (name, position, email, phoneNumber)
        + getRepresentativesOfCustomer(customer): List<CustomerRepresentative>
        + setStatus(status)
    }

    class Address <<Value Object>> {

    }
    class VatNumber <<Value Object>> {

    }
    enum CustomerStatus <<Value Object>> {

    }
    enum CustomerType <<Value Object>> {

    }
    class Position <<Value Object>> {

    }
    class Name <<Value Object>> {

    }
    class Email <<Value Object>> {

    }
    class PhoneNumber <<Value Object>> {

    }

    enum CustomerRepresentativeStatus <<Value Object>>{

    }
}

package "UI" #DDDDDD {
    class DisableCustomerRepresentativeUI <<UI>> {

    }
}

package "Controller" #DDDDDD {
    class DisableCustomerRepresentativeController <<Controller>> {
        + listRepresentativesOfAGivenCustomer(customer)
        + listAllCustomers()
        + disableCustomerRepresentative(representative)
    }
}

package "persistence.impl.jpa" #DDDDDD {
    class JpaCustomerRepository <<Repository>> {
    }

    class JpaRepositoryFactory <<Factory>> {
        - JpaRepositoryFactory()
        + getInstance() : RepositoryFactory
    }
}

package "persistence.impl.inmemory" #DDDDDD {
    class InMemoryCustomerRepository <<Repository>> {
    }

    class InMemoryRepositoryFactory <<Factory>> {
        - InMemoryRepositoryFactory()
        + getInstance() : RepositoryFactory
    }
}

package "persistence" #DDDDDD {
    class PersistenceContext {
        getRepositoryFactory() : RepositoryFactory
    }
}

' Relações entre as classes

RepositoryFactory ..> CustomerRepository : getCustomerRepository()



'Customer --> *
Customer --> "1..*" CustomerRepresentative : representative
Customer --> "1" VatNumber : vat
Customer --> "1" Address : address
Customer --> "1" CustomerStatus : status
Customer --> "1" CustomerType : type
Customer ----> "1" Name : name

'CustomerRepresentative --> *
CustomerRepresentative --> "1" Position : position
CustomerRepresentative --> "1" Name : name
CustomerRepresentative --> "1" Email : email
CustomerRepresentative --> "1" PhoneNumber : phoneNumber
CustomerRepresentative --> "1" CustomerRepresentativeStatus : status

'Repositories --> *

'CustomerRepository --> *
CustomerRepository --> "0..*" Customer : customers


'ListCustomerRepresentativesUI --> *
DisableCustomerRepresentativeUI ..> DisableCustomerRepresentativeController

'ListCustomerRepresentativesController --> *
DisableCustomerRepresentativeController ..> RepositoryFactory : getCustomerRepository()
DisableCustomerRepresentativeController ..> CustomerRepository : customerRepository
DisableCustomerRepresentativeController ..> CustomerListMapper : customerListDTO
DisableCustomerRepresentativeController ..> CustomerRepresentativeListMapper : customerRepresentativeListDTO
DisableCustomerRepresentativeController ..> PersistenceContext : getRepositoryFactory()


PersistenceContext ..> JpaRepositoryFactory : getInstance()
PersistenceContext ..> InMemoryRepositoryFactory : getInstance()
PersistenceContext ..> RepositoryFactory : getCustomerRepository()

JpaRepositoryFactory ...|> RepositoryFactory : getCustomerRepository()
JpaRepositoryFactory ..> JpaCustomerRepository
JpaRepositoryFactory --> JpaRepositoryFactory : instance

InMemoryRepositoryFactory .|> RepositoryFactory : getCustomerRepository()
InMemoryRepositoryFactory ..> InMemoryCustomerRepository
InMemoryRepositoryFactory --> InMemoryRepositoryFactory : instance

JpaCustomerRepository ..|> CustomerRepository : getCustomers()
InMemoryCustomerRepository ..|> CustomerRepository : getCustomers()

CustomerRepository ..|> Repository

'CustomerDTO --> *
CustomerDTO ..> CustomerListMapper : customerDTO

'RepresentativeDTO --> *
CustomerRepresentativeDTO ..> CustomerRepresentativeListMapper : customerRepresentativeDTO
@enduml